fix(get-involved): alignment for tablet devices covered

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -260,7 +260,7 @@ $atomium-bg-width: 1429px;
     }
 
     .rustfest-link {
-      @include mobile-only {
+      @include mobile-and-tablet-only {
         justify-self: center;
       }
       img {
